--- a/index.html
+++ b/index.html
@@ -16,14 +16,11 @@
       <nav class="navbar">
         <div class="logo">
           <div class="logo-image">
-            <!-- Replace the placeholder with your actual logo image -->
             <img
               src="Assests/logo.png"
               alt="OPTIMAL Cyber Security Logo"
               class="logo-img"
             />
-            <!-- Fallback icon if image doesn't load -->
-            <!-- <i class="fas fa-shield-alt logo-fallback"></i> -->
           </div>
         </div>
         <ul class="nav-links">
@@ -423,7 +420,7 @@
         anchor.addEventListener("click", function (e) {
           e.preventDefault();
           document.querySelector(this.getAttribute("href")).scrollIntoView({
-            behavior: "smooth",
+            behavior: "smooth"
           });
         });
       });
